# guile-web-sandbox

./: Dockerfile  README.md  build.sh  my-httpd.conf  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: deploy.yml
module/sandy/: safe-r5rs.scm  sandy.scm  save-stack.scm  scm-style-repl.scm
public_html/: index.html
sandy/: __init__.py  auth.py  blog.py  db.py
sandy/static/: style.css
sandy/templates/: base.html
tests/: test_auth.py  test_blog.py  test_db.py  test_factory.py
wsgi_scripts/: sandy.wsgi
